--- a/z_dev/public/assets/css/style.css
+++ b/z_dev/public/assets/css/style.css
@@ -233,8 +233,9 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("../img/hero-bg.jpg") top center;
+  background: url("https://dainedvorak.com/z_dev/public/assets/img/hero-bg..png") center center;
   background-size: cover;
+  background-color: #050d18;
 }
 
 #hero:before {
