--- a/z_dev/public/assets/css/style.css
+++ b/z_dev/public/assets/css/style.css
@@ -241,7 +241,7 @@ h6 {
 #hero {
   width: 100%;
   height: 100vh;
-  background: url("https://dainedvorak.com/z_dev/public/assets/img/hero-bg.jpg") top top;
+  background: url("https://dainedvorak.com/assets/img/hero-bg..jpg") top top;
   background-size: cover;
 }
 
