--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -823,7 +823,7 @@ transform: translate(-50%,-50%);
 	padding:0;
 }
 .port_bannerbg_wrapper {
-    background: url('https://dainedvorak.com/.dev-2025/dev/assets/images/0-temp/banner_bg-daine-dvorak-website.png'); 
+    background: url('https://dainedvorak.com/assets/images/0-temp/banner_bg-daine-dvorak-website.png'); 
    
 
 
